feature: TRACEFOSS-938 Adapt logic to fullfil that only the receiver is able to update notifications.